--- a/gestao/templates/admin_custom/base_admin.html
+++ b/gestao/templates/admin_custom/base_admin.html
@@ -43,6 +43,7 @@
             <a class="nav-link {% block menu_clientes %}{% endblock %}" href="{% url 'admin_clientes' %}">Clientes</a>
             <a class="nav-link {% block menu_contas %}{% endblock %}" href="{% url 'admin_contas' %}">Contas Fidelidade</a>
             <a class="nav-link {% block menu_programas %}{% endblock %}" href="{% url 'admin_programas' %}">Programas</a>
+            <a class="nav-link {% block menu_aeroportos %}{% endblock %}" href="{% url 'admin_aeroportos' %}">Aeroportos</a>
             <a class="nav-link {% block menu_emissoes %}{% endblock %}" href="{% url 'admin_emissoes' %}">Emissões</a>
             <a class="nav-link" href="{% url 'logout' %}">Sair</a>
         </nav>
