--- a/gestao/templates/admin_custom/emissoes.html
+++ b/gestao/templates/admin_custom/emissoes.html
@@ -63,8 +63,8 @@
                 <tr>
                     <td>{{ e.cliente.usuario.get_full_name|default:e.cliente.usuario.username }}</td>
                     <td>{{ e.programa }}</td>
-                    <td>{{ e.aeroporto_ida }}</td>
-                    <td>{{ e.aeroporto_volta }}</td>
+                    <td>{{ e.aeroporto_partida }}</td>
+                    <td>{{ e.aeroporto_destino }}</td>
                     <td>{{ e.data_ida|date:"d/m/Y" }}</td>
                     <td>{{ e.data_volta|date:"d/m/Y" }}</td>
                     <td>{{ e.qtd_passageiros }}</td>
