--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -22,6 +22,7 @@
         <label>Tipo de acesso:</label>
         <select name="perfil" required>
             <option value="cliente">Cliente</option>
+            <option value="operador">Operador</option>
             <option value="admin">Administrador</option>
         </select><br><br>
         <button type="submit">Entrar</button>
