--- a/painel_cliente/templates/painel_cliente/movimentacoes.html
+++ b/painel_cliente/templates/painel_cliente/movimentacoes.html
@@ -68,7 +68,7 @@
 <body>
     <div class="container">
         <a class="back-link" href="{% url 'painel_dashboard' %}">&larr; Voltar ao painel</a>
-        <h1>Extrato de Pontos</h1>
+        <h1>Extrato - {{ conta.programa.nome }}</h1>
         <table>
             <thead>
                 <tr>
