Add hotel emissions and enhancements

--- a/gestao/templates/admin_custom/base_admin.html
+++ b/gestao/templates/admin_custom/base_admin.html
@@ -45,6 +45,7 @@
             <a class="nav-link {% block menu_programas %}{% endblock %}" href="{% url 'admin_programas' %}">Programas</a>
             <a class="nav-link {% block menu_aeroportos %}{% endblock %}" href="{% url 'admin_aeroportos' %}">Aeroportos</a>
             <a class="nav-link {% block menu_emissoes %}{% endblock %}" href="{% url 'admin_emissoes' %}">Emissões</a>
+            <a class="nav-link {% block menu_hoteis %}{% endblock %}" href="{% url 'admin_hoteis' %}">Hotéis</a>
             <a class="nav-link" href="{% url 'logout' %}">Sair</a>
         </nav>
     </div>
