--- a/gestao/templates/admin_custom/programas.html
+++ b/gestao/templates/admin_custom/programas.html
@@ -14,6 +14,7 @@
             <thead>
                 <tr style="color:#b6a9ff;">
                     <th>Nome</th>
+                    <th>Valor Referência</th>
                     <th>Descrição</th>
                     <th></th>
                 </tr>
@@ -22,11 +23,12 @@
                 {% for p in programas %}
                 <tr>
                     <td>{{ p.nome }}</td>
+                    <td>R$ {{ p.preco_medio_milheiro|floatformat:2 }}</td>
                     <td>{{ p.descricao }}</td>
                     <td><a href="{% url 'admin_editar_programa' p.id %}" style="color:#b67cff;">Editar</a></td>
                 </tr>
                 {% empty %}
-                <tr><td colspan="3" style="color:#ff7070;text-align:center;">Nenhum programa cadastrado.</td></tr>
+                <tr><td colspan="4" style="color:#ff7070;text-align:center;">Nenhum programa cadastrado.</td></tr>
                 {% endfor %}
             </tbody>
         </table>
