--- a/painel_cliente/templates/painel_cliente/emissoes.html
+++ b/painel_cliente/templates/painel_cliente/emissoes.html
@@ -69,6 +69,8 @@
                     <th>Aeroporto Ida</th>
                     <th>Aeroporto Volta</th>
                     <th>Passageiros</th>
+                    <th>Companhia</th>
+                    <th>Localizador</th>
                     <th>Programa</th>
                     <th>Valor Referência</th>
                     <th>Valor Pago</th>
@@ -85,6 +87,8 @@
                     <td>{{ emissao.aeroporto_partida }}</td>
                     <td>{{ emissao.aeroporto_destino }}</td>
                     <td>{{ emissao.qtd_passageiros }}</td>
+                    <td>{{ emissao.companhia_aerea }}</td>
+                    <td>{{ emissao.localizador }}</td>
                     <td>{{ emissao.programa.nome }}</td>
                     <td>R$ {{ emissao.valor_referencia|floatformat:2 }}</td>
                     <td>R$ {{ emissao.valor_pago|floatformat:2 }}</td>
@@ -94,10 +98,16 @@
                 </tr>
                 {% empty %}
                 <tr>
-                    <td colspan="11" style="text-align:center;color:#f8d16c;">Nenhuma emissão encontrada.</td>
+                    <td colspan="13" style="text-align:center;color:#f8d16c;">Nenhuma emissão encontrada.</td>
                 </tr>
                 {% endfor %}
             </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="9" style="text-align:right;color:#f8d16c;">Total Pago:</td>
+                    <td colspan="4" style="color:#f8d16c;">R$ {{ total_pago|floatformat:2 }}</td>
+                </tr>
+            </tfoot>
         </table>
     </div>
 </body>
